tests/errors/tc_expr_compare.lx
@module "main"

pub const main -> fn () int {
    let x: bool = 1 == "hello";
    return 0;
}
